--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
   <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
   <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
 
-  <!-- Supabase (UMD) -->
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
-    :root{
-      --pending:#FFD8A8;   /* 0% (light orange) */
-      --doing:#EDE8D0;     /* in-progress base (light ash) */
-      --done:#008000;      /* 100% overlay */
-      --done-base:#E8F5EA; /* completed base */
+    :root {
+      --pending:#FFD8A8;   /* Pending */
+      --doing:#EDE8D0;     /* In progress base */
+      --done:#008000;      /* Completed overlay */
+      --done-base:#E8F5EA; /* Completed base */
       --ink:#202124; --muted:#6b7280; --border:#e5e7eb;
     }
 
-    html,body{height:100%}
     body{margin:0;background:#fff;color:var(--ink);font:15px/1.5 Inter,system-ui,Segoe UI,Roboto,Arial}
-
-    .wrap{height:100%;display:flex;flex-direction:column;padding:16px;box-sizing:border-box}
+    .wrap{height:100vh;display:flex;flex-direction:column;padding:16px;box-sizing:border-box}
     .top{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
     .brand{font-weight:700;font-size:18px}
     .controls>*{margin-left:6px}
@@ -38,10 +36,10 @@
     .sw.doing{background:var(--doing)}
     .sw.done{background:var(--done)}
 
-    /* Sleek, flat bars (no borders, no thick strokes) */
+    /* Sleek flat bars */
     #gantt .bar, #gantt .bar-progress { height:18px; rx:4px; ry:4px; stroke:none !important }
     #gantt .bar-wrapper{ transform:translateY(6px) }
-    .gantt .bar-label{ stroke:none; font-weight:600; fill:#111827; font-size:13px }
+    .gantt .bar-label{ font-weight:600; fill:#111827; font-size:13px }
 
     /* Tooltip */
     .tip{position:absolute;background:#fff;border:1px solid var(--border);padding:8px 10px;border-radius:8px;
@@ -74,7 +72,7 @@
   <div id="tip" class="tip"></div>
 
   <script>
-    // === Your Supabase project ===
+    // === Supabase connection ===
     const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
     const SUPABASE_ANON_KEY =
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
@@ -83,19 +81,17 @@
     const state = { view:'Week', monthKey:keyFromDate(new Date()) };
     let gantt, tasksById = {};
 
-    // ------------- Boot -------------
     init();
     async function init(){
       buildMonthPicker();
       bindControls();
       await render();
 
-      // Re-apply colors on any DOM redraw (prevents purple fallback)
+      // Re-apply colors whenever DOM updates
       const obs = new MutationObserver(() => applyColors());
       obs.observe(document.getElementById('gantt'), { childList:true, subtree:true });
     }
 
-    // ------------- Controls -------------
     function bindControls(){
       monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
       viewDay.onclick   = () => changeView('Day');
@@ -118,7 +114,6 @@
       }
     }
 
-    // ------------- Data helpers -------------
     function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
     function monthRangeFromKey(key){ const [y,m]=key.split('-').map(Number); return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) }; }
     function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
@@ -128,11 +123,9 @@
       const { data, error } = await supabase.from('tasks').select('*').order('start_date',{ascending:true});
       if(error){ console.error(error); return []; }
       const { start, end } = monthRangeFromKey(state.monthKey);
-      // Show tasks that intersect the selected month
       return (data||[]).filter(t => new Date(t.end_date||t.start_date)>=start && new Date(t.start_date)<=end);
     }
 
-    // ------------- Render -------------
     async function render(){
       const rows = await fetchTasks();
       const el = document.getElementById('gantt');
@@ -155,51 +148,33 @@
       attachTooltip();
     }
 
-    // ------------- Colors (locked to your scheme) -------------
     function applyColors(){
       document.querySelectorAll('#gantt .bar-wrapper').forEach(w=>{
-        const id = w.getAttribute('data-id'); const t = tasksById[id]; if(!t) return;
+        const t = tasksById[w.getAttribute('data-id')]; if(!t) return;
         const bar = w.querySelector('.bar'); const prog = w.querySelector('.bar-progress');
         if(!bar || !prog) return;
         const p = Math.max(0, Math.min(100, Number(t.progress||0)));
 
-        if(p === 0){
-          bar.setAttribute('fill', css('--pending'));
-          prog.setAttribute('fill', 'rgba(0,0,0,0)');
-        } else if(p >= 100){
-          bar.setAttribute('fill', css('--done-base'));
-          prog.setAttribute('fill', css('--done'));
-        } else {
-          bar.setAttribute('fill', css('--doing'));     // ash base
-          prog.setAttribute('fill', beigeRamp(p));      // deepening warm beige (no purple)
-        }
-        // Ensure no stroke comes back
+        if(p === 0){ bar.setAttribute('fill', css('--pending')); prog.setAttribute('fill','rgba(0,0,0,0)'); }
+        else if(p >= 100){ bar.setAttribute('fill', css('--done-base')); prog.setAttribute('fill', css('--done')); }
+        else { bar.setAttribute('fill', css('--doing')); prog.setAttribute('fill', beigeRamp(p)); }
+
         bar.setAttribute('stroke','none'); prog.setAttribute('stroke','none');
       });
     }
 
-    // Warm beige ramp for progress 1–99
-    function beigeRamp(p){
-      const h = 38, s = 70;            // warm beige/orange family
-      const lStart = 90, lEnd = 55;    // lighter -> deeper
-      const l = lStart + (lEnd - lStart) * (p/100);
-      return `hsl(${h}, ${s}%, ${l}%)`;
-    }
+    function beigeRamp(p){ const h=38,s=70,lStart=90,lEnd=55,l=lStart+(lEnd-lStart)*(p/100); return `hsl(${h},${s}%,${l}%)`; }
 
-    // ------------- Tooltip -------------
     function attachTooltip(){
-      const tip = document.getElementById('tip');
+      const tip=document.getElementById('tip');
       document.querySelectorAll('#gantt .bar-wrapper').forEach(w=>{
-        w.onmouseenter = () => {
-          const t = tasksById[w.getAttribute('data-id')]; if(!t) return;
-          tip.innerHTML = `<strong>${escapeHtml(t.name)}</strong><br>${t.start} → ${t.end}<br>${t.progress}%${t.notes?`<br>${escapeHtml(t.notes)}`:''}`;
-          tip.style.display = 'block';
-        };
-        w.onmousemove = e => { tip.style.left=(e.pageX+12)+'px'; tip.style.top=(e.pageY-20)+'px'; };
-        w.onmouseleave = () => { tip.style.display='none'; };
+        w.onmouseenter=()=>{ const t=tasksById[w.getAttribute('data-id')]; if(!t) return;
+          tip.innerHTML=`<strong>${t.name}</strong><br>${t.start} → ${t.end}<br>${t.progress}%${t.notes?`<br>${t.notes}`:''}`;
+          tip.style.display='block'; };
+        w.onmousemove=e=>{ tip.style.left=(e.pageX+12)+'px'; tip.style.top=(e.pageY-20)+'px'; };
+        w.onmouseleave=()=>{ tip.style.display='none'; };
       });
     }
-    function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
   </script>
 </body>
 </html>
